--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "start": "node dist/bin/www.js",
-    "build": "rimraf dist && cross-env NODE_ENV=production babel src -d dist -s",
+    "build": "rimraf dist && cross-env NODE_ENV=production babel src -d dist -s && cpy '***/*.html' '../dist/' --cwd=src --parents",
     "dev": "nodemon --exec babel-node src/bin/www.js",
     "test": "cross-env NODE_ENV=test jest",
     "cover": "npm run test -- --coverage",
@@ -20,6 +20,9 @@
     "babel-runtime": "^6.26.0",
     "bristol": "^0.4.0",
     "koa": "^2.5.1",
+    "koa-router": "^7.4.0",
+    "koa-send": "^5.0.0",
+    "koa-static": "^5.0.0",
     "mysql": "^2.15.0",
     "mysql-events": "^0.0.11",
     "palin": "^2.2.0",
@@ -33,6 +36,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2017": "^6.24.1",
     "babel-register": "^6.26.0",
+    "cpy-cli": "^2.0.0",
     "cross-env": "^5.2.0",
     "nodemon": "^1.17.5",
     "rimraf": "^2.6.2"
