--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "private": true,
   "scripts": {
     "start": "node dist/bin/www.js",
-    "build": "rimraf dist && cross-env NODE_ENV=production babel src -d dist -s && cpy '***/*.html' '../dist/' --cwd=src --parents && '***/*.json' '../dist/' --cwd=src --parents",
+    "build": "rimraf dist && cross-env NODE_ENV=production babel src -d dist -s && cpy '***/*.html' '../dist/' --cwd=src --parents &&  cpy '***/*.json' '../dist/' --cwd=src --parents",
     "dev": "nodemon --exec babel-node src/bin/www.js",
     "test": "cross-env NODE_ENV=test jest",
     "cover": "npm run test -- --coverage",
